HPE_FrontEnd/src/hPE/frontend/HCL/parser/HCLParser.java
/* Generated By:JavaCC: Do not edit this line. HCLParser.java */
package hPE.frontend.HCL.parser;
import hPE.frontend.HCL.symbol_table.*;

public class HCLParser implements HCLParserConstants {

  final public Component Start() throws ParseException {
 Component component;
    component = absConfig();
    jj_consume_token(0);
                                     {if (true) return component;}
    throw new Error("Missing return statement in function");
  }

  final public Component absConfig() throws ParseException {
 Component component = new Component();boolean flag=false;Import imp;Imports_list import_list = new Imports_list();Token kind_tk;Public_Component_list public_component_list;Inner_Component inner_comp=null;Inner_Component_list inner_comp_list = new Inner_Component_list();Unit_list unit_list = new Unit_list();Unit unit;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      imp = imports(flag);
                             flag=true;import_list.add(imp);
    }
                                                                  component.setImports_list(import_list);
    kind_tk = kind();
                                                                                                                           component.setKind(kind_tk.image);component.setBeginLine(kind_tk.beginLine);component.setBeginColumn(kind_tk.beginColumn);
    public_component_list = header(component);
                                                                                                                                                                                                                                                                                               component.setPublic_component_list(public_component_list);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMPUTATION:
      case DATA:
      case ARCHITECTURE:
      case ENVIRONMENT:
      case QUALIFIER:
      case SYNCHRONIZER:
      case APPLICATION:
      case ENUMERATOR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      inner_comp = inner(public_component_list);
                                                                                                                                                                                                                                                                                                                                                                                                     inner_comp_list.add(inner_comp);
    }
                                                                                                                                                                                                                                                                                                                                                                                                                                          component.setInnercomplist(inner_comp_list);
    label_3:
    while (true) {
      unit = unit();
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      unit_list.add(unit);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNIT:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
    }
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               component.setUnitlist(unit_list);{if (true) return component;}
    throw new Error("Missing return statement in function");
  }

  final public Import imports(boolean flag) throws ParseException {
 Token import_tk;Token id_tk;String nPackage;
    import_tk = jj_consume_token(IMPORT);
    nPackage = namePackage();
                                                   if ( (flag) && ((import_tk.specialToken==null) || (import_tk.specialToken.kind != NEWLINE))) { {if (true) throw new ParseException("New line expected before uses statement in line "+import_tk.beginLine+" and column "+import_tk.beginColumn);}}
                                                                                                                                                                                                                                                                                             {if (true) return new Import(nPackage,import_tk.beginLine,import_tk.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public String namePackage() throws ParseException {
 Token id_tk;String pack="";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SLICE:
      id_tk = jj_consume_token(SLICE);
                       pack+=id_tk.image;
      label_4:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                       pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
      }
                                                                                                                                                                                                                                                                                                                                  {if (true) return pack;}
      break;
    case FROM:
      id_tk = jj_consume_token(FROM);
                        pack+=id_tk.image;
      label_5:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                        pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
      }
                                                                                                                                                                                                                                                                                                                                   {if (true) return pack;}
      break;
    case UNIT:
      id_tk = jj_consume_token(UNIT);
                        pack+=id_tk.image;
      label_6:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                        pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
      }
                                                                                                                                                                                                                                                                                                                                   {if (true) return pack;}
      break;
    case IMPORT:
      id_tk = jj_consume_token(IMPORT);
                          pack+=id_tk.image;
      label_7:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                          pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_7;
        }
      }
                                                                                                                                                                                                                                                                                                                                     {if (true) return pack;}
      break;
    case COMPUTATION:
      id_tk = jj_consume_token(COMPUTATION);
                               pack+=id_tk.image;
      label_8:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                               pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_8;
        }
      }
                                                                                                                                                                                                                                                                                                                                          {if (true) return pack;}
      break;
    case DATA:
      id_tk = jj_consume_token(DATA);
                        pack+=id_tk.image;
      label_9:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                        pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
      }
                                                                                                                                                                                                                                                                                                                                   {if (true) return pack;}
      break;
    case ARCHITECTURE:
      id_tk = jj_consume_token(ARCHITECTURE);
                                pack+=id_tk.image;
      label_10:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                                pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
      }
                                                                                                                                                                                                                                                                                                                                           {if (true) return pack;}
      break;
    case ENVIRONMENT:
      id_tk = jj_consume_token(ENVIRONMENT);
                               pack+=id_tk.image;
      label_11:
      while (true) {
        jj_consume_token(DOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id_tk = jj_consume_token(ID);
          break;
        case FROM:
          id_tk = jj_consume_token(FROM);
          break;
        case UNIT:
          id_tk = jj_consume_token(UNIT);
          break;
        case IMPORT:
          id_tk = jj_consume_token(IMPORT);
          break;
        case COMPUTATION:
          id_tk = jj_consume_token(COMPUTATION);
          break;
        case DATA:
          id_tk = jj_consume_token(DATA);
          break;
        case ARCHITECTURE:
          id_tk = jj_consume_token(ARCHITECTURE);
          break;
        case ENVIRONMENT:
          id_tk = jj_consume_token(ENVIRONMENT);
          break;
        case QUALIFIER:
          id_tk = jj_consume_token(QUALIFIER);
          break;
        case APPLICATION:
          id_tk = jj_consume_token(APPLICATION);
          break;
        case ENUMERATOR:
          id_tk = jj_consume_token(ENUMERATOR);
          break;
        case SYNCHRONIZER:
          id_tk = jj_consume_token(SYNCHRONIZER);
          break;
        case SLICE:
          id_tk = jj_consume_token(SLICE);
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                                                                                                                               pack+="."+id_tk.image;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_11;
        }
      }
                                                                                                                                                                                                                                                                                                                                          {if (true) return pack;}
      break;
    case QUALIFIER:
      id_tk = jj_consume_token(QUALIFIER);
